--- a/blocks/footer/footer.less
+++ b/blocks/footer/footer.less
@@ -58,9 +58,9 @@
   #js-hidden-panda {
     display: none;
     width: 25px;
-    height: 110px;
+    height: 58px;
     background: url('../img/footer-spritesheet.png') no-repeat;
-    background-position: -875px -5px;
+    background-position: -875px -33px;
 
     &:hover {
       cursor: pointer;
@@ -119,6 +119,7 @@
     line-height: 30px;
     position: relative;
 
+    span > span { display: inline-block; min-width: 164px; }
     label {font-weight: normal;}
 
     &:before {
