--- a/css/style.css
+++ b/css/style.css
@@ -1421,6 +1421,9 @@ div[class*=" flaticon-"]:after {
   footer .footer__contacts {
     padding: 0 20px !important;
   }
+  footer .footer__contacts__address span:last-child label {
+    display: none;
+  }
 }
 @media (max-width: 530px) {
   footer .footer__menu {
@@ -1459,8 +1462,6 @@ div[class*=" flaticon-"]:after {
   footer #js-hidden-panda {
     display: block !important;
     float: right;
-    height: 58px !important;
-    background-position: -875px -33px !important;
   }
   footer .footer__about > .footer__btn {
     width: 100%;
@@ -1469,6 +1470,9 @@ div[class*=" flaticon-"]:after {
   footer .footer__contacts > div {
     width: 100% !important;
     text-align: left !important;
+  }
+  footer .footer__contacts__address span label {
+    display: block;
   }
 }
 @media (max-width: 500px) {
@@ -1651,9 +1655,9 @@ div[class*=" flaticon-"]:after {
 .footer #js-hidden-panda {
   display: none;
   width: 25px;
-  height: 110px;
+  height: 58px;
   background: url('../img/footer-spritesheet.png') no-repeat;
-  background-position: -875px -5px;
+  background-position: -875px -33px;
 }
 .footer #js-hidden-panda:hover {
   cursor: pointer;
@@ -1706,6 +1710,10 @@ div[class*=" flaticon-"]:after {
   font-size: 18px;
   line-height: 30px;
   position: relative;
+}
+.footer__contacts__address span > span {
+  display: inline-block;
+  min-width: 164px;
 }
 .footer__contacts__address label {
   font-weight: normal;
